{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 19,
  "lineage": "25c27223-17ac-4d5e-b52e-21832d66682d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "aatif-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0df7a207adb9748c7",
            "arn": "arn:aws:ec2:ap-southeast-1:644760543735:instance/i-0e661af12d95033f0",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e661af12d95033f0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aatif-aws-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-063af870c7f330edc",
            "private_dns": "ip-172-31-36-7.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.36.7",
            "public_dns": "ec2-47-129-206-130.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "47.129.206.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ca79827219477457",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-020230e4eb6d1a9c4",
            "tags": {
              "Name": "aatif-ec2"
            },
            "tags_all": {
              "Name": "aatif-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f938e9ba8d229529"
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "your_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0df7a207adb9748c7",
            "arn": "arn:aws:ec2:ap-southeast-1:644760543735:instance/i-0dd41cc37cd61b386",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dd41cc37cd61b386",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06e8346aabe3dc268",
            "private_dns": "ip-10-0-0-17.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.17",
            "public_ip": "54.169.248.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bc1b67286a2e2de6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-08a934d5fdc5f2010"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eb2559521d01d633",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08a934d5fdc5f2010"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.aatif_securitygroup",
            "aws_subnet.aatif_subnet1",
            "aws_vpc.aatif_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aatif_internetgateway_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:644760543735:internet-gateway/igw-015162213c6645afb",
            "id": "igw-015162213c6645afb",
            "owner_id": "644760543735",
            "tags": {
              "name": "aatif_internetgateway_igw"
            },
            "tags_all": {
              "name": "aatif_internetgateway_igw"
            },
            "vpc_id": "vpc-0565e741a408d2c7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.aatif_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "aatif_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:644760543735:loadbalancer/app/aatif-alb/8e2808cb8382342b",
            "arn_suffix": "app/aatif-alb/8e2808cb8382342b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "aatif-alb-1792835306.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:644760543735:loadbalancer/app/aatif-alb/8e2808cb8382342b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "aatif-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-089e59651a759c6b1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05f92f098370631a4"
              },
              {
                "subnet_id": "subnet-0eb2559521d01d633"
              }
            ],
            "subnets": [
              "subnet-05f92f098370631a4",
              "subnet-0eb2559521d01d633"
            ],
            "tags": {
              "Name": "aatif-alb"
            },
            "tags_all": {
              "Name": "aatif-alb"
            },
            "vpc_id": "vpc-0565e741a408d2c7e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.aatif_subnet1",
            "aws_subnet.aatif_subnet2",
            "aws_vpc.aatif_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "aatif_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:644760543735:listener/app/aatif-alb/8e2808cb8382342b/0d4e6deabbe74253",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:644760543735:targetgroup/aatif-tg/2badbdb8c6cd35ca",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:644760543735:listener/app/aatif-alb/8e2808cb8382342b/0d4e6deabbe74253",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:644760543735:loadbalancer/app/aatif-alb/8e2808cb8382342b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.aatif_alb",
            "aws_lb_target_group.aatif_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.aatif_subnet1",
            "aws_subnet.aatif_subnet2",
            "aws_vpc.aatif_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "aatif_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:644760543735:targetgroup/aatif-tg/2badbdb8c6cd35ca",
            "arn_suffix": "targetgroup/aatif-tg/2badbdb8c6cd35ca",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:644760543735:targetgroup/aatif-tg/2badbdb8c6cd35ca",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "aatif-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0565e741a408d2c7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.aatif_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aatif_routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:644760543735:route-table/rtb-0320304ce187a9831",
            "id": "rtb-0320304ce187a9831",
            "owner_id": "644760543735",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-015162213c6645afb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "aatif_routetable"
            },
            "tags_all": {
              "name": "aatif_routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0565e741a408d2c7e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.aatif_internetgateway_igw",
            "aws_vpc.aatif_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aatif_routetableassociation1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c21ad6ff9278afcf",
            "route_table_id": "rtb-0320304ce187a9831",
            "subnet_id": "subnet-0eb2559521d01d633"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.aatif_internetgateway_igw",
            "aws_route_table.aatif_routetable",
            "aws_subnet.aatif_subnet1",
            "aws_vpc.aatif_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aatif_routetableassociation2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2ae0c5f23a18a1d",
            "route_table_id": "rtb-0320304ce187a9831",
            "subnet_id": "subnet-05f92f098370631a4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.aatif_internetgateway_igw",
            "aws_route_table.aatif_routetable",
            "aws_subnet.aatif_subnet2",
            "aws_vpc.aatif_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aatif_securitygroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:644760543735:security-group/sg-08a934d5fdc5f2010",
            "description": "allow ssh and http",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08a934d5fdc5f2010",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "aatif_securitygroup",
            "name_prefix": "",
            "owner_id": "644760543735",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0565e741a408d2c7e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.aatif_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:644760543735:security-group/sg-089e59651a759c6b1",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-089e59651a759c6b1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "644760543735",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0565e741a408d2c7e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.aatif_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aatif_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:644760543735:subnet/subnet-0eb2559521d01d633",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb2559521d01d633",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "644760543735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aatif_subnet1"
            },
            "tags_all": {
              "Name": "aatif_subnet1"
            },
            "vpc_id": "vpc-0565e741a408d2c7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.aatif_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aatif_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:644760543735:subnet/subnet-05f92f098370631a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f92f098370631a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "644760543735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aatif_subnet2"
            },
            "tags_all": {
              "Name": "aatif_subnet2"
            },
            "vpc_id": "vpc-0565e741a408d2c7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.aatif_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aatif_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:644760543735:vpc/vpc-0565e741a408d2c7e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02bf56602ca30330f",
            "default_route_table_id": "rtb-0a297e665b14c448e",
            "default_security_group_id": "sg-07868abbe5232d0a7",
            "dhcp_options_id": "dopt-0a2685a7d4dc24815",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0565e741a408d2c7e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a297e665b14c448e",
            "owner_id": "644760543735"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}